--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "description": "Boilerplate code to quickly start express development in typescript.",
     "main": "index.js",
     "scripts": {
+        "format": "prettier . --write",
+        "lint": "eslint . --fix",
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
     },
@@ -27,6 +29,10 @@
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/node": "^16.11.7",
+        "@typescript-eslint/eslint-plugin": "^5.18.0",
+        "@typescript-eslint/parser": "^5.18.0",
+        "eslint": "^8.12.0",
+        "prettier": "^2.6.2",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.4.4"
     }
