--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "plugins": ["@typescript-eslint"],
     "extends": [
         "eslint:recommended",
+        "eslint-config-prettier",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended"
     ]
